--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/welfurn_interior_design
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/smhsdtl
+spring.datasource.username=smhsdev
+spring.datasource.password=smhsdev
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
