Changes in db and for customer portal

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://35.172.58.119:5432/smhsdtl
+spring.datasource.url=jdbc:postgresql://smhsdtl.cv0awf3gx5gp.us-east-1.rds.amazonaws.com/smhsdtl
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
