--- a/bin/src/main/resources/application-local.properties
+++ b/bin/src/main/resources/application-local.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/welfurn_interior_design
+spring.datasource.url=jdbc:postgresql://smhsdtl.cv0awf3gx5gp.us-east-1.rds.amazonaws.com/smhsdtl
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
