--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://smhsdtl.cv0awf3gx5gp.us-east-1.rds.amazonaws.com/smhsdtl
+spring.datasource.url=jdbc:postgresql://smhs.c3tj80pqtw6q.us-west-1.rds.amazonaws.com/smhs
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
